# embeded-linux-dev

./: .gitignore  embeded-linux-dev-ref.code-workspace  embeded-linux-dev.code-workspace
docs/: index.md
l01/src/SerialNetTools/: main_test.cpp
l02/src/SerialNetTools/: CMakeLists.txt
l04/docs/: manual.md
l04/src/SerialNetTools/: main_test.cpp  serialNetTools.h
l04/src/common/logs/: common_test.INFO
l05/docs/: manual.md
l05/src/SerialNetTools/: CMakeLists.txt
l05/src/qt_ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
l06/docs/: manual.md  ros.md  ros1.md
l06/src/common/logs/: common20240905-222222.11495
l06/src/qt_ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  rosNode.cpp  rosNode.h
l07/docs/: manual.md
l07/src/common/: CMakeLists.txt  common.cpp
l07/src/qt_ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  rosNode.cpp
l08/: CMakeLists.txt  Readme.md
l08/doc/: manual.md
l08/src/qt_ui/: CMakeLists.txt
l09/: CMakeLists.txt  Readme.md
l09/doc/: ros1.md
l09/src/: CMakeLists.txt
l10/: CMakeLists.txt  Readme.md
l10/doc/: manual.md  qa.md  qt.md  ros1.md
l10/src/serialNetTools/: CMakeLists.txt
l10/src/serialNetTools/common/: myLog.cpp
l10/src/serialNetTools/qt_ui/: CMakeLists.txt  mainwindow.ui  rosNode.h
l10/src/serialNetTools/serialNetTools/: serialNetTools.cpp
l10/src/test/: CMakeLists.txt
l20/: CMakeLists.txt  Readme.md
l20/src/serialNetTools/: CMakeLists.txt
l20/src/serialNetTools/qt_ui/: CMakeLists.txt
l21/: Readme.md
l21/doc/: glog.md  manual.md  qa.md  qt.md
l21/src/serialNetTools/mySerial/: main_test.cpp  mySerial.cpp  mySerial.h
l21/src/serialNetTools/qt_ui/: mainwindow.cpp
l21/src/serialNetTools/serialNetTools/: CMakeLists.txt
l210/: Readme.md
l210/doc/: qa.md
l210/src/serialNetTools/: CMakeLists.txt
l210/src/serialNetTools/myTcp/: tcpClient.cpp  tcpClient.h  tcpServer.h
l210/src/serialNetTools/qt_ui/: mainwindow.cpp  mainwindow.h
l210/src/serialNetTools/serialNetTools/: CMakeLists.txt  main.cpp  serialNetTools.cpp  serialNetTools.h
l22/: Readme.md
l22/doc/: manual.md  ros1.md
l22/src/serialNetTools/common/: myLog.cpp
l22/src/serialNetTools/mySerial/: mySerial.cpp  mySerial.h
l22/src/serialNetTools/qt_ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
l23/: CMakeLists.txt  Readme.md
l23/src/: CMakeLists.txt
l23/src/serialNetTools/: CMakeLists.txt
l23/src/serialNetTools/common/: common.h
l23/src/serialNetTools/qt_ui/: mainwindow.cpp  mainwindow.h
l23/src/serialNetTools/rosNode/: main_test.cpp
l23/src/serialNetTools/serialNetTools/: main.cpp  serialNetTools.h
l24/: Readme.md
l24/doc/: glog.md
l24/src/serialNetTools/qt_ui/: mainwindow.cpp
l24/src/serialNetTools/rosNode/: rosNode.cpp
l24/src/serialNetTools/serialNetTools/: main.cpp  serialNetTools.cpp
l24/src/test/: main.cpp
l25/src/serialNetTools/myTcp/: CMakeLists.txt  tcpClient.cpp
l25/src/serialNetTools/qt_ui/: mainwindow.h  mainwindow.ui
l25/src/serialNetTools/rosNode/: rosNode.h
l27/src/serialNetTools/common/: myLog.h
l27/src/serialNetTools/mySerial/: mySerial.cpp
l27/src/serialNetTools/myTcp/: tcpClient.cpp  tcpServer.h
l27/src/serialNetTools/qt_ui/: CMakeLists.txt  mainwindow.cpp
l27/src/serialNetTools/serialNetTools/: CMakeLists.txt
l28/doc/: qa.md  qt.md
l28/doc/bk/: mainwindow.ui
l28/src/serialNetTools/mySerial/: CMakeLists.txt  main_test.cpp
l28/src/serialNetTools/myTcp/: tcpServer.cpp
l28/src/serialNetTools/qt_ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
l28/src/serialNetTools/rosNode/: CMakeLists.txt
l28/src/serialNetTools/serialNetTools/: CMakeLists.txt  serialNetTools.cpp  serialNetTools.h
l29/: CMakeLists.txt  Readme.md
l29/doc/: log.md
l29/src/serialNetTools/common/: CMakeLists.txt  main_common_test.cpp
l29/src/serialNetTools/mySerial/: mySerial.h
l29/src/serialNetTools/myTcp/: CMakeLists.txt  tcpServer.cpp
l29/src/serialNetTools/qt_ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
l29/src/serialNetTools/serialNetTools/: serialNetTools.cpp  serialNetTools.h
